@@ -81,7 +81,8 @@ typedef enum
 	S2S_CFG_QUIRKS_NONE = 0,
 	S2S_CFG_QUIRKS_APPLE = 1,
 	S2S_CFG_QUIRKS_OMTI = 2,
-	S2S_CFG_QUIRKS_XEBEC = 4
+	S2S_CFG_QUIRKS_XEBEC = 4,
+	S2S_CFG_QUIRKS_VMS = 8
 } S2S_CFG_QUIRKS;
 
 typedef enum
